--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash.orderby": "^4.6.0",
     "material-icons-react": "^1.0.4",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
