--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
   "plugins": ["react"],
   "rules": {
     "react/jsx-filename-extension": [0],
+    "import/extensions": "off",
     "react/react-in-jsx-scope": "off",
     "import/no-unresolved": "off",
     "no-undef": "off",
